# Pointerverse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  action.yml  vcpkg.json
.github/workflows/: guard-selftest.yml  release.yml
apps/pointerverse/: backend_stress.cpp  main.cpp
deploy/: install-pointerverse.sh  update-pointerverse.sh
deploy/systemd/: pointerverse-update.service  pointerverse-update.timer  pointerverse.service
docs/: AXIOMS.md  DRIFT.md  FORMAL_MODEL.md  GLOSSARY.md  REALMS_LAYER.md  ROADMAP.md
examples/: agent_audit_rules.pvdomain  agent_audit_valid.pv  agent_audit_violation.pv  basic.pv  contradiction_seed.pv  derivation.pv  derivation.pvdomain  external_events.json  imported.pv  lawful_composition.pv  minimal_reality.pv  pressure.pv
examples/kernel_stress/: kernel_stress.cpp  run_demo.sh
examples/pr_guard/: README.md  expected_report.md
examples/sentinel_fault_demo/: run_demo.sh
include/pointerverse/: analyzer.hpp  law.hpp  model.hpp  morphism.hpp  object.hpp  observer.hpp  script.hpp  state_vector.hpp  trace.hpp  types.hpp  world.hpp
scripts/: pointerverse-guard-action.sh
src/: analyzer.cpp  model.cpp  observer.cpp  script.cpp  state_vector.cpp  trace.cpp  types.cpp  world.cpp
src/audit/: report.cpp  risk_score.cpp  timeline.cpp  violation_report.cpp
src/breakpoint/: breakpoint_finder.cpp  evidence_chain.cpp  repair_candidate.cpp
src/category/: composition.cpp
src/cli/: script.cpp
src/cli_app/: registry.cpp
src/compiler/: program_builder.cpp  script_compiler.cpp
src/core/: attribute.cpp  fact.cpp  id.cpp  object.cpp  operation.cpp  relation.cpp  snapshot.cpp  snapshot_page.cpp  type.cpp  value.cpp  world.cpp  world_index.cpp
src/decision/: decision_report.cpp  signal_model.cpp
src/domain/: agent_audit.cpp  domain.cpp  package.cpp  schema.cpp
src/guard/: finding.cpp  git_diff_adapter.cpp  guard_pipeline.cpp  policy_pack.cpp  report.cpp
src/hash/: canonical.cpp  hasher.cpp
src/ingest/: agent_audit_adapter.cpp  event_schema.cpp  evidence.cpp  graph_log_importer.cpp  ingestion_index.cpp  ingestion_pipeline.cpp  jsonl_adapter.cpp  normalizer.cpp
src/intervention/: intervention_lattice.cpp  intervention_search.cpp  intervention_trace.cpp  operator.cpp  operator_family.cpp  operator_program.cpp  refinement_tree.cpp  scale_value.cpp
src/kernel/: canonical_codec.cpp  execution_plan.cpp  executor.cpp  fact_store.cpp  instruction.cpp  merkle.cpp  program.cpp  proof.cpp  vm.cpp
src/law/: invariant.cpp  verifier.cpp
src/measure/: breakpoint_measure.cpp  calibration.cpp  component_record.cpp  counterfactual_measure.cpp  cut_analysis.cpp  graph_functional.cpp  graph_view.cpp  history_measure.cpp  intrinsic_edit_cost.cpp  law_measure.cpp  measurement_index.cpp  measurement_record.cpp  measurement_spec.cpp  measurement_store.cpp  measurement_verifier.cpp  repair_measure.cpp  risk_evidence.cpp  risk_functional.cpp  risk_lattice.cpp  risk_projection.cpp  risk_value.cpp  structural_measure.cpp
src/normalize/: canonical_event.cpp  graph_event_encoder.cpp
src/observer/: observer.cpp
src/projection/: entity_projection.cpp  projection_store.cpp  relation_projection.cpp  timeline_projection.cpp
src/query/: explanation.cpp  graph_query.cpp  history_query.cpp  query.cpp
src/rule/: derivation.cpp  pattern.cpp  rule.cpp  rule_engine.cpp
src/runtime/: commit_graph.cpp  commit_record.cpp  ids.cpp  merge.cpp  replayer.cpp  snapshot_store.cpp  transaction.cpp  world_store.cpp
src/sentinel/: boot_gate.cpp  fault_injection.cpp  heartbeat.cpp  patrol.cpp  region_table.cpp  report.cpp  sentinel.cpp
src/source/: source_batch.cpp  source_event.cpp
src/storage/: canonical_codec.cpp  chunked_snapshot_store.cpp  commit_index.cpp  content_store.cpp  event_index.cpp  index_store.cpp  integrity.cpp  lock_file.cpp  manifest.cpp  object_codec.cpp  pack_store.cpp  recovery.cpp  ref_store.cpp  repository.cpp  repository_engine.cpp  repository_gc.cpp  repository_transaction.cpp  snapshot_materializer.cpp  wal.cpp  world_index_store.cpp
src/surface/: manifest.cpp  registry.cpp
src/trace/: recorder.cpp  replayer.cpp
tests/: analyzer_tests.cpp  model_tests.cpp  script_tests.cpp  state_vector_tests.cpp  world_tests.cpp
tests/architecture/: target_boundary_tests.cpp
tests/audit/: report_tests.cpp
tests/breakpoint/: breakpoint_finder_tests.cpp  evidence_chain_tests.cpp  repair_candidate_tests.cpp
tests/category/: category_tests.cpp
tests/cli/: cli_tests.cpp
tests/core/: core_tests.cpp  delta_tests.cpp  value_tests.cpp
tests/decision/: decision_report_tests.cpp  signal_model_tests.cpp
tests/domain/: agent_audit_tests.cpp
tests/guard/: git_diff_adapter_tests.cpp  guard_pipeline_tests.cpp  policy_pack_tests.cpp
tests/hash/: canonical_hash_tests.cpp
tests/ingest/: agent_audit_ingestion_tests.cpp  canonical_ingestion_tests.cpp  evidence_tests.cpp  idempotency_tests.cpp  jsonl_adapter_tests.cpp
tests/intervention/: intervention_lattice_tests.cpp  intervention_search_tests.cpp  operator_program_tests.cpp  refinement_tree_tests.cpp  scale_value_tests.cpp
tests/kernel/: attribute_snapshot_tests.cpp  execution_plan_tests.cpp  merkle_root_tests.cpp  operation_tests.cpp  program_codec_tests.cpp  proof_tests.cpp  vm_tests.cpp
tests/law/: law_tests.cpp
tests/measure/: breakpoint_measure_tests.cpp  calibration_tests.cpp  component_record_tests.cpp  counterfactual_measure_tests.cpp  cut_analysis_tests.cpp  graph_functional_tests.cpp  graph_view_tests.cpp  history_measure_tests.cpp  intrinsic_edit_cost_tests.cpp  law_measure_tests.cpp  measurement_store_tests.cpp  measurement_verifier_tests.cpp  repair_measure_tests.cpp  risk_functional_tests.cpp  risk_lattice_tests.cpp  structural_measure_tests.cpp
tests/normalize/: canonical_event_tests.cpp  graph_event_encoder_tests.cpp
tests/projection/: entity_projection_tests.cpp  relation_projection_tests.cpp  timeline_projection_tests.cpp
tests/query/: query_tests.cpp  repository_query_tests.cpp
tests/rule/: derivation_tests.cpp  (+1 more)
ui/: README.md  index.html  serve.py
(+295 files in other folders)
